Fix language incompatibility